# Parkrust

./: Cargo.toml  README.md  index.html  output-18c7eb71dee8f62f.css  output-3b596465a38fd76a.css  output-4cf75bbade3f9697.css  output-50a5ae2b0d33b1d4.css  output-6c66d919e0745d4d.css  output-6d9abc8dbe919848.css  output-a5c557f652e4ce2e.css  output-b62b6d5c21fc005e.css  output-c79d227d0968eb29.css  parkrust_ui-159e4b245e51acd5.js  parkrust_ui-159e4b245e51acd5_bg.wasm  parkrust_ui-1bf1129159844c49.js  parkrust_ui-1bf1129159844c49_bg.wasm  parkrust_ui-2553edf33c401bc8.js  parkrust_ui-2553edf33c401bc8_bg.wasm  parkrust_ui-35e7e61f899bab3f.js  parkrust_ui-35e7e61f899bab3f_bg.wasm  parkrust_ui-453492e59e4eb806.js  parkrust_ui-453492e59e4eb806_bg.wasm  parkrust_ui-502f0a8204343c69.js  parkrust_ui-502f0a8204343c69_bg.wasm  parkrust_ui-57b31fbd97a69706.js  parkrust_ui-57b31fbd97a69706_bg.wasm  parkrust_ui-622524786947049f.js  parkrust_ui-622524786947049f_bg.wasm  parkrust_ui-8c3ce44b729bad84.js  parkrust_ui-8c3ce44b729bad84_bg.wasm  parkrust_ui-9306ee7011259e39.js  parkrust_ui-9306ee7011259e39_bg.wasm  parkrust_ui-e311b8e2e3d2df34.js  parkrust_ui-e311b8e2e3d2df34_bg.wasm  parkrust_ui-e50788c01e1d5124.js  parkrust_ui-e50788c01e1d5124_bg.wasm  parkrust_ui-effd4c98aaaf384c.js  parkrust_ui-effd4c98aaaf384c_bg.wasm
.github/workflows/: deploy.yml  main.yml  ui_deploy.yml  ui_test.yml
parkrust/: Cargo.toml
parkrust/parkrust_derive/: Cargo.toml
parkrust/parkrust_derive/src/: lib.rs
parkrust/src/client/: mod.rs  requests.rs
parkrust/src/models/: parkrun.rs
parkrust_cli/: Cargo.toml
parkrust_cli/src/: main.rs
parkrust_cli/src/cli/: mod.rs
parkrust_derive/: Cargo.toml
parkrust_derive/src/: lib.rs
parkrust_ui/: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
parkrust_ui/parkrust_ui_derive/: Cargo.toml
parkrust_ui/parkrust_ui_derive/src/: lib.rs
parkrust_ui/src/: app.rs  lib.rs  main.rs
parkrust_ui/src/components/: button.rs  card.rs  input.rs  loading_spinner.rs  mod.rs  table.rs
parkrust_ui/src/routes/: events.rs  home.rs  login.rs  mod.rs  results.rs
parkrust_ui/src/services/: mod.rs  parkrun.rs
parkrust_ui/src/utils/: router.rs
parkrust_ui/styles/: index.css  output.css
src/: lib.rs  main.rs
src/cli/: mod.rs
src/client/: mod.rs
src/models/: parkrun.rs
