[package]
name = "parkrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parkrust_derive = { path = "./parkrust_derive" }

reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.57"
tokio = { version = "1", features = ["sync", "rt"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4"
clap = { version = "4.0.7", features = ["derive"] }
