[package]
name = "parkrust_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parkrust = { path = "../parkrust" }

tokio = { version = "1", features = ["full"] }
clap = { version = "4.0.7", features = ["derive"] }
