[package]
name = "parkrust_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
parkrust = { path = "../parkrust" }
parkrust_ui_derive = { path = "./parkrust_ui_derive" }

yew = { version = "0.20", features = ["csr"] }
yew-router = { version = "0.17" }
wasm-bindgen-futures = "0.4.33"
material-yew = { version = "0.2", features = ["full"] }
web-sys = "0.3.60"
gloo = "0.8.0"
chrono = { version = "0.4", features = [ "serde" ] }
num-traits = "0.2.15"
